# tmp_hello-world_misc

./: shard.yml
Elixir/: elixir-hello-world.ex  endpoint.ex  hello_world_web_server.ex  mix.exs  router.ex  start_server.exs.orig
Elixir/config/: prod.exs
Elixir/controllers/: page_controller.ex
F#/: Program.fs  suave.fsproj
cobol-hello-world-server/: HelloWorldServer.cbl  helloworld.cob  main.go
crystal/: .gitignore  shard.yml
dart/: pubspec.yaml
deno/: deno.json  deps.ts  index.js  package-lock.json  package.json  server.ts
dotnet/Properties/: launchSettings.json
elixir/: manifest.nix
elixir/hello_world_server/: mix.exs
elixir/hello_world_server/_build/dev/lib/cowboy/ebin/: cowboy.beam  cowboy_app.beam  cowboy_bstr.beam  cowboy_children.beam  cowboy_clear.beam  cowboy_clock.beam  cowboy_compress_h.beam  cowboy_constraints.beam  cowboy_handler.beam  cowboy_http.beam  cowboy_http2.beam  cowboy_loop.beam  cowboy_metrics_h.beam  (+12 more)
elixir/hello_world_server/config/: config.exs
elixir/hello_world_server/lib/: application.ex  hello_world_server.ex
elixir/lib/: hello_world_web_server.ex
elixir2/: build.nix  hello_world.ex  mix.exs  start_server.exs
haskell/: HelloWorldServer.nix  Main.hs  default.nix  hello-world-server.cabal  stack.yml
hello_world_server/: .gitignore  mix.exs
hello_world_server/config/: config.exs
hello_world_server/lib/hello_world_server_web/: router.ex
hello_world_server/lib/hello_world_server_web/controllers/: page_controller.ex
src/: server.cr
zig/: .gitignore  README.md  build.zig  default.nix  main.zig  server.zig
(+123 files in other folders)
