name:                hello-world-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable hello-world-server
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , http-types
  hs-source-dirs:      src
  default-language:    Haskell2010
